src/ar/edu/ubp/tc/Final/SintacticoParser.java
// Generated from C:\Users\PC\Desktop\PEF\JavaApplication5\src\ar\edu\u005Cubp\tc\Final\Sintactico.g4 by ANTLR 4.2.2
package ar.edu.ubp.tc.Final;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SintacticoParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ENTERO=1, FLOTANTE=2, TIPODEDATO=3, TIPO_INT=4, TIPO_FLOAT=5, TIPO_DOUBLE=6, 
		TIPO_BOOL=7, TIPO_CHAR=8, CARACTER=9, CADENA=10, PARA=11, SI=12, MIENTRAS=13, 
		HACER=14, SINO=15, SWITC=16, CASO=17, RETURNO=18, ID=19, OPLOGICAS=20, 
		COMPARACIONES=21, OPMATEMATICAS=22, ASIGNACION=23, PUNTOYCOMA=24, COMA=25, 
		CORCHETEA=26, CORCHETEC=27, PARENTESISA=28, PARENTESISC=29, LLAVEA=30, 
		LLAVEC=31, VALOR=32, TRUEFALSE=33, WS=34;
	public static final String[] tokenNames = {
		"<INVALID>", "ENTERO", "FLOTANTE", "TIPODEDATO", "'int'", "'float'", "'double'", 
		"'bool'", "'char'", "CARACTER", "CADENA", "'for'", "'if'", "'while'", 
		"'do'", "'else'", "'switch'", "'case'", "'return'", "ID", "OPLOGICAS", 
		"COMPARACIONES", "OPMATEMATICAS", "ASIGNACION", "';'", "','", "'['", "']'", 
		"'('", "')'", "'{'", "'}'", "VALOR", "TRUEFALSE", "WS"
	};
	public static final int
		RULE_codigo = 0, RULE_instrucciones = 1, RULE_declaracion = 2, RULE_instruccion = 3, 
		RULE_faltapuntoycoma = 4, RULE_faltapuntoycoma2 = 5, RULE_faltaparentesis = 6, 
		RULE_faltaparentesis2 = 7, RULE_datos = 8, RULE_operacion = 9, RULE_datos_opMatematica = 10, 
		RULE_variable_operacion = 11, RULE_operacion_matematica = 12, RULE_asignacion = 13, 
		RULE_variable = 14, RULE_parametros_funcion = 15, RULE_parametros_funcion_mal = 16, 
		RULE_declarar_variables = 17, RULE_declarar_funcion = 18, RULE_declarar_variable_mal = 19, 
		RULE_declarar_variable_mal_tipo = 20, RULE_parametros_funcion_decl = 21, 
		RULE_funcion = 22, RULE_llamada_funcion = 23, RULE_llamada_funcion_mal = 24, 
		RULE_bloque = 25, RULE_bloque_mal = 26, RULE_returno = 27, RULE_returno_mal = 28, 
		RULE_condicion = 29, RULE_estructuras_de_control = 30, RULE_si = 31, RULE_mientras = 32, 
		RULE_para = 33, RULE_sino = 34, RULE_si_entonces = 35;
	public static final String[] ruleNames = {
		"codigo", "instrucciones", "declaracion", "instruccion", "faltapuntoycoma", 
		"faltapuntoycoma2", "faltaparentesis", "faltaparentesis2", "datos", "operacion", 
		"datos_opMatematica", "variable_operacion", "operacion_matematica", "asignacion", 
		"variable", "parametros_funcion", "parametros_funcion_mal", "declarar_variables", 
		"declarar_funcion", "declarar_variable_mal", "declarar_variable_mal_tipo", 
		"parametros_funcion_decl", "funcion", "llamada_funcion", "llamada_funcion_mal", 
		"bloque", "bloque_mal", "returno", "returno_mal", "condicion", "estructuras_de_control", 
		"si", "mientras", "para", "sino", "si_entonces"
	};

	@Override
	public String getGrammarFileName() { return "Sintactico.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SintacticoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CodigoContext extends ParserRuleContext {
		public InstruccionesContext instrucciones(int i) {
			return getRuleContext(InstruccionesContext.class,i);
		}
		public List<InstruccionesContext> instrucciones() {
			return getRuleContexts(InstruccionesContext.class);
		}
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).enterCodigo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).exitCodigo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SintacticoVisitor ) return ((SintacticoVisitor<? extends T>)visitor).visitCodigo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_codigo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72); instrucciones();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TIPODEDATO || _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).enterInstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).exitInstrucciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SintacticoVisitor ) return ((SintacticoVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); declaracion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public Declarar_variablesContext declarar_variables() {
			return getRuleContext(Declarar_variablesContext.class,0);
		}
		public FaltaparentesisContext faltaparentesis() {
			return getRuleContext(FaltaparentesisContext.class,0);
		}
		public Declarar_funcionContext declarar_funcion() {
			return getRuleContext(Declarar_funcionContext.class,0);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(SintacticoParser.PUNTOYCOMA, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public FaltapuntoycomaContext faltapuntoycoma() {
			return getRuleContext(FaltapuntoycomaContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SintacticoVisitor ) return ((SintacticoVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79); funcion();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(80); declarar_variables();
					}
					break;

				case 2:
					{
					setState(81); declarar_funcion();
					}
					break;

				case 3:
					{
					setState(82); variable();
					}
					break;
				}
				setState(85); match(PUNTOYCOMA);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87); faltapuntoycoma();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88); faltaparentesis();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public Declarar_variablesContext declarar_variables() {
			return getRuleContext(Declarar_variablesContext.class,0);
		}
		public Faltapuntoycoma2Context faltapuntoycoma2() {
			return getRuleContext(Faltapuntoycoma2Context.class,0);
		}
		public Estructuras_de_controlContext estructuras_de_control() {
			return getRuleContext(Estructuras_de_controlContext.class,0);
		}
		public Faltaparentesis2Context faltaparentesis2() {
			return getRuleContext(Faltaparentesis2Context.class,0);
		}
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(SintacticoParser.PUNTOYCOMA, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).exitInstruccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SintacticoVisitor ) return ((SintacticoVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruccion);
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(91); declarar_variables();
					}
					break;

				case 2:
					{
					setState(92); variable();
					}
					break;

				case 3:
					{
					setState(93); llamada_funcion();
					}
					break;

				case 4:
					{
					setState(94); operacion();
					}
					break;
				}
				setState(97); match(PUNTOYCOMA);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99); estructuras_de_control();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100); faltapuntoycoma2();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101); faltaparentesis2();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FaltapuntoycomaContext extends ParserRuleContext {
		public Declarar_variablesContext declarar_variables() {
			return getRuleContext(Declarar_variablesContext.class,0);
		}
		public Declarar_funcionContext declarar_funcion() {
			return getRuleContext(Declarar_funcionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public FaltapuntoycomaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_faltapuntoycoma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).enterFaltapuntoycoma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).exitFaltapuntoycoma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SintacticoVisitor ) return ((SintacticoVisitor<? extends T>)visitor).visitFaltapuntoycoma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FaltapuntoycomaContext faltapuntoycoma() throws RecognitionException {
		FaltapuntoycomaContext _localctx = new FaltapuntoycomaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_faltapuntoycoma);
		try {
			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104); declarar_variables();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105); declarar_funcion();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(106); variable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Faltapuntoycoma2Context extends ParserRuleContext {
		public Declarar_variablesContext declarar_variables() {
			return getRuleContext(Declarar_variablesContext.class,0);
		}
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Faltapuntoycoma2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_faltapuntoycoma2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).enterFaltapuntoycoma2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).exitFaltapuntoycoma2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SintacticoVisitor ) return ((SintacticoVisitor<? extends T>)visitor).visitFaltapuntoycoma2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Faltapuntoycoma2Context faltapuntoycoma2() throws RecognitionException {
		Faltapuntoycoma2Context _localctx = new Faltapuntoycoma2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_faltapuntoycoma2);
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109); declarar_variables();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110); variable();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111); llamada_funcion();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(112); operacion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FaltaparentesisContext extends ParserRuleContext {
		public TerminalNode PARENTESISC() { return getToken(SintacticoParser.PARENTESISC, 0); }
		public Declarar_variablesContext declarar_variables() {
			return getRuleContext(Declarar_variablesContext.class,0);
		}
		public TerminalNode ID() { return getToken(SintacticoParser.ID, 0); }
		public TerminalNode TIPODEDATO() { return getToken(SintacticoParser.TIPODEDATO, 0); }
		public Parametros_funcionContext parametros_funcion() {
			return getRuleContext(Parametros_funcionContext.class,0);
		}
		public Parametros_funcion_declContext parametros_funcion_decl() {
			return getRuleContext(Parametros_funcion_declContext.class,0);
		}
		public TerminalNode PARENTESISA() { return getToken(SintacticoParser.PARENTESISA, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(SintacticoParser.PUNTOYCOMA, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public FaltaparentesisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_faltaparentesis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).enterFaltaparentesis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).exitFaltaparentesis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SintacticoVisitor ) return ((SintacticoVisitor<? extends T>)visitor).visitFaltaparentesis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FaltaparentesisContext faltaparentesis() throws RecognitionException {
		FaltaparentesisContext _localctx = new FaltaparentesisContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_faltaparentesis);
		int _la;
		try {
			setState(157);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115); match(TIPODEDATO);
				setState(116); match(ID);
				setState(118);
				_la = _input.LA(1);
				if (_la==TIPODEDATO) {
					{
					setState(117); parametros_funcion();
					}
				}

				setState(120); match(PARENTESISC);
				setState(121); match(PUNTOYCOMA);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); match(TIPODEDATO);
				setState(123); match(ID);
				setState(125);
				_la = _input.LA(1);
				if (_la==TIPODEDATO) {
					{
					setState(124); declarar_variables();
					}
				}

				setState(127); match(PARENTESISC);
				setState(128); bloque();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129); match(TIPODEDATO);
				setState(130); match(ID);
				setState(132);
				_la = _input.LA(1);
				if (_la==TIPODEDATO) {
					{
					setState(131); parametros_funcion_decl();
					}
				}

				setState(134); match(PARENTESISC);
				setState(135); bloque();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(136); match(TIPODEDATO);
				setState(137); match(ID);
				setState(138); match(PARENTESISA);
				setState(140);
				_la = _input.LA(1);
				if (_la==TIPODEDATO) {
					{
					setState(139); parametros_funcion();
					}
				}

				setState(142); match(PUNTOYCOMA);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(143); match(TIPODEDATO);
				setState(144); match(ID);
				setState(145); match(PARENTESISA);
				setState(147);
				_la = _input.LA(1);
				if (_la==TIPODEDATO) {
					{
					setState(146); declarar_variables();
					}
				}

				setState(149); bloque();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(150); match(TIPODEDATO);
				setState(151); match(ID);
				setState(152); match(PARENTESISA);
				setState(154);
				_la = _input.LA(1);
				if (_la==TIPODEDATO) {
					{
					setState(153); parametros_funcion_decl();
					}
				}

				setState(156); bloque();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Faltaparentesis2Context extends ParserRuleContext {
		public TerminalNode PARENTESISC() { return getToken(SintacticoParser.PARENTESISC, 0); }
		public TerminalNode MIENTRAS() { return getToken(SintacticoParser.MIENTRAS, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public TerminalNode ASIGNACION() { return getToken(SintacticoParser.ASIGNACION, 0); }
		public TerminalNode PARA() { return getToken(SintacticoParser.PARA, 0); }
		public TerminalNode ID(int i) {
			return getToken(SintacticoParser.ID, i);
		}
		public TerminalNode PUNTOYCOMA(int i) {
			return getToken(SintacticoParser.PUNTOYCOMA, i);
		}
		public TerminalNode SI() { return getToken(SintacticoParser.SI, 0); }
		public TerminalNode PARENTESISA() { return getToken(SintacticoParser.PARENTESISA, 0); }
		public List<TerminalNode> PUNTOYCOMA() { return getTokens(SintacticoParser.PUNTOYCOMA); }
		public List<TerminalNode> COMA() { return getTokens(SintacticoParser.COMA); }
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public List<TerminalNode> ID() { return getTokens(SintacticoParser.ID); }
		public TerminalNode COMA(int i) {
			return getToken(SintacticoParser.COMA, i);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public TerminalNode ENTERO() { return getToken(SintacticoParser.ENTERO, 0); }
		public TerminalNode SINO() { return getToken(SintacticoParser.SINO, 0); }
		public Faltaparentesis2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_faltaparentesis2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).enterFaltaparentesis2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SintacticoListener ) ((SintacticoListener)listener).exitFaltaparentesis2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SintacticoVisitor ) return ((SintacticoVisitor<? extends T>)visitor).visitFaltaparentesis2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Faltaparentesis2Context faltaparentesis2() throws RecognitionException {
		Faltaparentesis2Context _localctx = new Faltaparentesis2Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_faltaparentesis2);
		int _la;
		try {
			setState(252);
			switch ( getInterpreter().adaptivePredict(_input,28,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(159); match(ID);
				setState(168);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(160); match(ID);
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMA) {
						{
						{
						setState(161); match(COMA);
						setState(162); match(ID);
						}
						}
						setState(167);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(170); match(PARENTESISC);
				setState(171); match(PUNTOYCOMA);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(186);
				switch (_input.LA(1)) {
				case MIENTRAS:
					{
					setState(172); match(MIENTRAS);
					setState(173); condicion();
					setState(174); match(PARENTESISC);
					}
					break;
				case PARA:
					{
					setState(176); match(PARA);
					setState(177); match(ID);
					setState(178); match(ASIGNACION);
					setState(179);
					_la = _input.LA(1);
					if ( !(_la==ENTERO || _la==ID) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(180); match(PUNTOYCOMA);
					setState(181); condicion();
					setState(182); match(PUNTOYCOMA);
